Sync changes & Fix build